[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/interface/menu/menu_screen.png" type="Texture" id=1]
[ext_resource path="res://src/ingame/musics/Music.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/MonsterFriendFore - Opstions.otf" type="DynamicFontData" id=3]
[ext_resource path="res://src/ingame/musics/musics/menu.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="MusicControl" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -284.0
margin_right = -21.0
margin_bottom = -284.0
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 344.0
margin_right = 432.0
margin_bottom = 416.0
custom_constants/separation = 10

[node name="Mute" type="CheckBox" parent="Control/VBoxContainer"]
margin_right = 400.0
margin_bottom = 28.0
focus_neighbour_top = NodePath("../btnVoltar")
focus_neighbour_bottom = NodePath("../ControleMusic")
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0705882, 0.803922, 0.741176, 1 )
custom_colors/font_color_pressed = Color( 0.121569, 0.141176, 0.737255, 1 )
custom_fonts/font = SubResource( 1 )
pressed = true
text = "Music ON OFF"
align = 1

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_top = 38.0
margin_right = 400.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Volume"
align = 1

[node name="ControleMusic" type="HSlider" parent="Control/VBoxContainer"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 84.0
min_value = -60.0
max_value = 0.0
value = -60.0

[node name="btnVoltar" type="Button" parent="Control/VBoxContainer"]
margin_top = 94.0
margin_right = 400.0
margin_bottom = 120.0
focus_neighbour_top = NodePath("../ControleMusic")
focus_neighbour_bottom = NodePath("../Mute")
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Voltar"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="toggled" from="Control/VBoxContainer/Mute" to="." method="_on_Mute_toggled"]
[connection signal="value_changed" from="Control/VBoxContainer/ControleMusic" to="." method="_on_ControleMusic_value_changed"]
[connection signal="pressed" from="Control/VBoxContainer/btnVoltar" to="." method="_on_btnVoltar_pressed"]
